Refactor ItemBuilder and add ItemTemplate and scheduler module
Refactored ItemBuilder to simplify API, removing skull and model-related methods, and improving naming and usage of MiniMessage. Added ItemTemplate for reusable item construction with immediate and delayed actions. Updated SkullFactory texture hash handling. Added new paper:scheduler module with initial PaperTask enum and build config. Updated dependencies and settings to include new module and latest Paper API.